# custom_model_gazebo

./: README.md
meshes/: Rotor 1 Link.dae  Rotor 2 Link.dae  Rotor 3 Link.dae  Rotor 4 Link.dae
models/F450_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py  tree.md
models/F450_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
models/F450_description/install/F450_description/share/F450_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
models/F450_description/install/F450_description/share/F450_description/environment/: F450_description.dsv
models/F450_description/install/F450_description/share/ament_index/resource_index/package_run_dependencies/: F450_description
models/F450_description/install/F450_description/share/ament_index/resource_index/parent_prefix_path/: F450_description
models/F450_description/launch/: display.launch.py  gazebo.launch.py
models/F450_description/log/: latest_build
models/F450_description/meshes/: base_link.stl
models/F450_description/urdf/: F450.gazebo  F450.sdf  F450.trans  F450.urdf  F450.xacro  F450_plugins.xacro  materials.xacro
models/F450_description/worlds/: custom_world.sdf
models/custom_drone/: 1_rotor.sdf  model.config  model.sdf  original.sdf
models/custom_gimbal/: model.config  model.sdf
worlds/: custom_runway.sdf
