<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>F450_description</name>
  <version>0.0.0</version>
<description>The F450_description package</description>
  <maintainer email="todo@todo.com">author</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rapidjson-dev</build_depend>  
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend condition="$GZ_VERSION == harmonic">gz-cmake3</depend>
  <depend condition="$GZ_VERSION == harmonic">gz-sim8</depend>
  <depend condition="$GZ_VERSION == ''">gz-cmake3</depend>
  <depend condition="$GZ_VERSION == ''">gz-sim8</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <build_type>ament_cmake</build_type>
  </export>
</package>
